[metadata]
name = rumster
version = 0.0.1
summary = Rummy score keeper.
description-file =
    README.rst
author = Endre Karlson
author-email = endre.karlson@gmail.com
home-page = http://github.com/ekarlso/rumster
classifier =
    Environment :: Games
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[files]
packages =
    rumster

[entry_points]
console_scripts =
    rumster-server = rumster.cmd.api:main
    rumster-manage = rumster.cmd.manage:main

rumster.manage =
    database = rumster.manage.database:DatabaseCommands

[pbr]
autodoc_index_modules = True

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0

[compile_catalog]
directory = rumster/locale
domain = rumster

[update_catalog]
domain = rumster
output_dir = rumster/locale
input_file = rumster/locale/rumster.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = rumster/locale/rumster.pot

[wheel]
universal = 1